tests/snapshots/cli_golden__agents_inspect.snap
---
source: tests/cli_golden.rs
expression: help
---
List live + orphaned subagents in tabular form

Usage: aura agents inspect [OPTIONS]

Options:
      --alive
          Restrict listing to live (registry-tracked) agents only

      --mode <MODE>
          Phase 9: top-level `AgentMode` override. Highest rung of the documented resolution priority chain (CLI > TUI slash > SDK field > daemon default > `AgentMode::Agent` fallback). The flag is resolved at session start by the fleet daemon's `resolve_session_mode` helper

          Possible values:
          - agent: Full unrestricted operation subject to user permissions
          - plan:  Read + markdown writes + read-only subprocesses
          - ask:   Read-only
          - debug: Read + sandboxed probes only

      --orphans
          Restrict listing to orphaned agents only

      --all
          List both (default)

      --orphan-root <ORPHAN_ROOT>
          Override the orphan-store root directory

  -h, --help
          Print help (see a summary with '-h')
