tests/snapshots/cli_golden__plugins.snap
---
source: tests/cli_golden.rs
expression: help
---
Manage declarative plugins (Phase 4b).

Subcommands install / list / enable / disable interact with the on-disk plugin cache under `AURA_HOME/plugins/` and the `[plugins.<id>]` table inside `AURA_HOME/config.toml`. No agent-loop wiring lands until Phase 4c (hooks/MCP/connectors) and Phase 8 (full integration).

Usage: aura plugins [OPTIONS] <COMMAND>

Commands:
  install  Install a plugin from a local source directory
  list     List installed plugins and their active versions
  enable   Enable a plugin in `AURA_HOME/config.toml` (`enabled = true`)
  disable  Disable a plugin in `AURA_HOME/config.toml` (`enabled = false`)
  help     Print this message or the help of the given subcommand(s)

Options:
      --mode <MODE>
          Phase 9: top-level `AgentMode` override. Highest rung of the documented resolution priority chain (CLI > TUI slash > SDK field > daemon default > `AgentMode::Agent` fallback). The flag is resolved at session start by the fleet daemon's `resolve_session_mode` helper

          Possible values:
          - agent: Full unrestricted operation subject to user permissions
          - plan:  Read + markdown writes + read-only subprocesses
          - ask:   Read-only
          - debug: Read + sandboxed probes only

  -h, --help
          Print help (see a summary with '-h')
